--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,7 @@
 
     <nav>
         <!-- You can place navigation links here -->
+        <li><a href="/login">Login/Sign Up</a></li>
     </nav>
 
     <main>
