added to handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat Adoption</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
     <header>
         <h1>Welcome to Cat Adoption</h1>
@@ -13,6 +15,12 @@
 
     <nav>
         <!-- You can place navigation links here -->
+        {{#if logged_in}}
+        <a href="/">profile</a> |
+        <button class="no-button" id="logout">logout</button>
+        {{else}}
+        <a href="/login">login</a>
+        {{/if}}
     </nav>
 
     <main>
@@ -22,5 +30,13 @@
     <footer>
         <p>Thank you for considering adopting a cat!</p>
     </footer>
+
+    <!-- Render script for logged in users only -->
+    <div> {{#if logged_in}}
+        <script src="/js/logout.js"></script>
+        {{/if}}
+    </div>
+
 </body>
+
 </html>
