--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,7 +7,7 @@
             <h3>{{this.name}}</h3>
             <p>Age: {{this.age}}</p>
             <p>Description: {{this.description}}</p>
-            <a href="/cats/{{this.id}}">View Details</a>
+            <a href="/api/cat/{{this.id}}">View Details</a>
         </li>
         {{/each}}
     </ul>
