--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,16 +10,16 @@
 
 <body>
     <header>
-        <h1>Welcome to Cat Adoption</h1>
+        <h1>Welcome to Amazing Cats!!</h1>
     </header>
 
     <nav>
-        <!-- You can place navigation links here -->
+        <a href="/">Home</a>
         {{#if logged_in}}
-        <a href="/">profile</a> |
-        <button class="no-button" id="logout">logout</button>
+        <a href="/shelter">My Shelter</a> |
+        <button class="no-button" id="logout">Logout</button>
         {{else}}
-        <a href="/login">login</a>
+        <a href="/login">Login</a>
         {{/if}}
     </nav>
 
