staged for final commitment

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -22,7 +22,7 @@
             <address>
                 {{this.address}}
             </address>
-            <a href="/shelters/{{this.id}}">More Info</a>
+            <a href="/api/shelter/{{this.id}}">More Info</a>
         </li>
         {{/each}}
     </ul>
