--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,12 +14,12 @@
     </header>
 
     <nav>
-        <a href="/">Home</a>
         {{#if logged_in}}
-        <a href="/shelter">My Shelter</a> |
+        <a href="/dashboard">Home</a>
+        {{!-- <a href="/shelter">My Shelter</a> | --}}
         <button class="no-button" id="logout">Logout</button>
         {{else}}
-        <a href="/login">Login</a>
+        {{!-- <a href="/login">Login</a> --}}
         {{/if}}
     </nav>
 
@@ -28,7 +28,7 @@
     </main>
 
     <footer>
-        <p>Thank you for considering adopting a cat!</p>
+        {{!-- <p>Thank you for considering adopting a cat!</p> --}}
     </footer>
 
     <!-- Render script for logged in users only -->
