--- a/views/cats.handlebars
+++ b/views/cats.handlebars
@@ -4,7 +4,7 @@
     <div class="card" style="width: 18rem;">
         <div class="card-body">
  
-            <a href="/api/cats/{{this.id}}" class="card-title">{{cat.name}}</a>
+            <a href="/cat/{{this.id}}" class="card-title">{{cat.name}}</a>
 
             {{!-- <a href="/shelter/{{shelter.id}}" class="btn btn-primary">View Cats</a> --}}
         </div>
