--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,5 @@
 <div class="row">
+
   <div class="col-md-6">
     <h2>Login</h2>
 
@@ -12,10 +13,11 @@
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+        <button class="btn btn-primary" type="submit">Login</button>
       </div>
     </form>
   </div>
+
   <div class="col-md-6">
     <h2>Signup</h2>
 
@@ -29,14 +31,15 @@
         <input class="form-input" type="text" id="username-signup" />
       </div>
       <div class="form-group">
-        <label for="password-signup">password:</label>
+        <label for="password-signup">Password:</label>
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+        <button class="btn btn-primary" type="submit">Sign Up</button>
       </div>
     </form>
   </div>
+
 </div>
 
 <script src="./js/login.js"></script>
