--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,40 +1,10 @@
-{{!-- <section>
-    <h2>Available Cats</h2>
-    <ul>
-        {{#each cats}}
-        <li>
-            <img src="{{this.imageURL}}" alt="{{this.name}}" />
-            <h3>{{this.name}}</h3>
-            <p>Age: {{this.age}}</p>
-            <p>Description: {{this.description}}</p>
-            <a href="/api/cat/{{this.id}}">View Details</a>
-        </li>
-        {{/each}}
-    </ul>
-</section>
-
-<section>
-    <h2>Participating Shelters</h2>
-    <ul>
-        {{#each shelters}}
-        <li>
-            <h3>{{this.name}}</h3>
-            <address>
-                {{this.address}}
-            </address>
-            <a href="/api/shelter/{{this.id}}">More Info</a>
-        </li>
-        {{/each}}
-    </ul>
-</section> --}}
-
 <div>
     {{#if logged_in}}
     {{#each shelters as |shelter|}}
     <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title">{{shelter.username}}</h5>
-            <a href="/shelter/{{shelter.id}}" class="btn btn-primary">View Cats</a>
+            <a href="/shelter/{{shelter.id}}" class="btn btn-primary">View Location</a>
         </div>
     </div>
     {{/each}}
