--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cat Adoption</title>
+    <title>Amazing Cats</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -17,8 +17,6 @@
         {{#if logged_in}}
         <a href="/dashboard">Home</a>
         <button class="no-button" id="logout">Logout</button>
-        {{else}}
-        {{!-- <a href="/login">Login</a> --}}
         {{/if}}
     </nav>
 
@@ -26,15 +24,7 @@
         {{{body}}}
     </main>
 
-    <footer>
-        {{!-- <p>Thank you for considering adopting a cat!</p> --}}
-    </footer>
-
-    <!-- Render script for logged in users only -->
-    <div> {{#if logged_in}}
-        <script src="/js/logout.js"></script>
-        {{/if}}
-    </div>
+    <script src="/js/logout.js"></script>
 
 </body>
 
