Got the route working

--- a/views/cat.handlebars
+++ b/views/cat.handlebars
@@ -3,7 +3,7 @@
   <div class="cat-details">
     <h3>{{cat.name}}</h3>
     {{!-- <img src="" alt="{{cat.description}}"> --}}
-    <p>PHOTO</p>
+    <img src="{{cat.photo}}" alt="cat"></p>
     <p>Breed: {{cat.breed}}</p>
     <p>Age: {{cat.age}}</p>
     <p>{{cat.description}}</p>
