--- a/views/newCat.handlebars
+++ b/views/newCat.handlebars
@@ -1,5 +1,5 @@
 
-    <form action="">
+<form class="form add-cat-form">
         <label for="cat-name">Name: </label>
         <input id="cat-name" type="text">
         <label for="cat-breed">Breed: </label>
