--- a/views/newCat.handlebars
+++ b/views/newCat.handlebars
@@ -1,14 +1,17 @@
-
-<form class="form add-cat-form">
+<form class="form add-cat-form" type="submit" action="/api/cat/new/{{shelter_id}}" method="post"
+        encType="multipart/form-data">
         <label for="cat-name">Name: </label>
-        <input id="cat-name" type="text">
+        <input id="cat-name" name="name" type="text">
         <label for="cat-breed">Breed: </label>
-        <input id="cat-breed" type="text">
+        <input id="cat-breed" name="breed" type="text">
         <label for="cat-age">Age: </label>
-        <input id="cat-age" type="text">
+        <input id="cat-age" name="age" type="text">
         <label for="cat-description">Description: </label>
-        <input id="cat-description" type="text">
+        <input id="cat-description" name="description" type="text">
         <label for="cat-photo">Choose a photo:</label>
-<input type="file" id="cat-photo" name="cat-photo" accept=".jpg, .jpeg, .png" />
+        <input type="file" id="cat-photo" name="photo" accept=".jpg, .jpeg, .png" />
         <button id="new-cat-submit">Submit</button>
-    </form>
+</form>
+
+{{!--
+<script src="/js/addCat.js"></script> --}}
