--- a/views/cat.handlebars
+++ b/views/cat.handlebars
@@ -1,5 +1,5 @@
+{{#if logged_in}}
 <section class="cat">
-  <img src="" alt="{{cat.description}}">
   <div class="cat-details">
     <h3>{{cat.name}}</h3>
     <img src="{{cat.photo}}" alt="cat"></p>
@@ -8,3 +8,4 @@
     <p>{{cat.description}}</p>
   </div>
 </section>
+{{/if}}
