--- a/views/cat.handlebars
+++ b/views/cat.handlebars
@@ -6,7 +6,7 @@
     <p>Breed: {{cat.breed}}</p>
     <p>Age: {{cat.age}}</p>
     <p>{{cat.description}}</p>
-    <button class="btn btn-sm btn-danger" data-id="{{cat.id}}">DELETE</button>
+    <button class="btn btn-sm btn-danger" data-id="{{cat.id}}">With a New Family!</button>
   </div>
 </section>
 {{/if}}
