--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,7 +42,7 @@ main {
     width: 25rem;
     height: 10rem;
     align-items: center;
-   
+    margin-top: 30px;
 }
 
 #login-area > h2{
@@ -50,7 +50,13 @@ main {
     margin-bottom: 15px;
     font-family: 'Lilita One', sans-serif;
 }
-
+.btn{
+    margin-top: 15px;
+    padding: 10px 20px;
+    background-color: var(--mint);
+    border: none;
+    border-radius: 3px;
+}
 .form-group{
     display: flex;
     justify-content: space-between;
