--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,12 +17,10 @@
 <body>
     <header>
         <h1>Welcome to Amazing Cats!!</h1>
-    
-
     <nav>
         {{#if logged_in}}
         <a href="/dashboard">Home</a>
-        <button class="no-button" id="logout">Logout</button>
+        <a class="no-button" id="logout">Logout</a>
         {{/if}}
     </nav>
     </header>
