--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,17 +14,18 @@
         <h2>Add New Location</h2>
 
         <form class="new-location-form">
-            <div class="form-group">
+            <div class="new-location">
+            <div class="location-username">
                 <label for="username-signup">Username:</label>
                 <input class="form-input" type="text" id="username-signup" />
             </div>
-            <div class="form-group">
+            <div class="location-password">
                 <label for="password-signup">Password:</label>
                 <input class="form-input" type="password" id="password-signup" />
             </div>
-                
+            </div>
         </form>
-        <button class="btn btn-primary" type="submit">Sign Up</button>
+        <button class="btn btn-primary" type="submit">Add</button>
 </div>
 <script src="./js/newLocation.js"></script>
 
