--- a/views/myShelter.handlebars
+++ b/views/myShelter.handlebars
@@ -9,8 +9,6 @@
     </div>
     {{/each}}
     </div>
-
-        <a href="/cat/new/{{shelter.id}}" id="add-cat-button">Add Cat</a>
- 
+        <button><a href="/cat/new/{{shelter.id}}" id="add-cat-button">Add Cat</a></button>
     {{/if}}
 </div>
