--- a/views/newCat.handlebars
+++ b/views/newCat.handlebars
@@ -1,4 +1,4 @@
-<form class="form add-cat-form" type="submit" action="/api/cat/new/{{shelter_id}}" method="post"
+<form class="add-cat-form" type="submit" action="/api/cat/new/{{shelter_id}}" method="post"
     encType="multipart/form-data">
     <label for="cat-name">Name: </label>
     <input id="cat-name" name="name" type="text">
