--- a/views/newCat.handlebars
+++ b/views/newCat.handlebars
@@ -10,5 +10,5 @@
     <input id="cat-description" name="description" type="text">
     <label for="cat-photo">Choose a photo:</label>
     <input type="file" id="cat-photo" name="photo" accept=".jpg, .jpeg, .png" />
-    <button id="new-cat-submit">Submit</button>
+    <button class="btn" id="new-cat-submit">Submit</button>
 </form>
