--- a/views/cat.handlebars
+++ b/views/cat.handlebars
@@ -8,7 +8,7 @@
     <p>Age: {{cat.age}}</p>
     <p>{{cat.description}}</p>
     </div>
-    <button class="btn btn-sm btn-danger" data-id="{{cat.id}}">With a New Family!</button>
+    <button class="btn" data-id="{{cat.id}}">With a New Family!</button>
   </div>
 </section>
 {{/if}}
