--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
         <label for="password-login">Password:</label>
         <input class="form-input" type="password" id="password-login" />
       </div>
-        <button class="btn btn-primary" type="submit">Login</button>
+        <button class="btn" type="submit">Login</button>
     </form>
   </div>
 </div>
