--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
-<div class="row">
+<div id="bg-image">
 
-  <div class="col-md-6" id= "login-area">
+  <div id= "login-area">
     <h2>Login</h2>
 
     <form class="form login-form">
@@ -15,6 +15,7 @@
         <button class="btn" type="submit">Login</button>
     </form>
   </div>
+
 </div>
 
 <script src="./js/login.js"></script>
